# mode

./: Cargo.toml  index.html
assets/characters/: baker.aseprite  bug_collector.aseprite  gardener.aseprite  librarian.aseprite  student.aseprite
src/: game_mod.rs  how_to_play.rs  leaderboard.rs  loading.rs  main.rs  main_menu.rs  settings.rs
