[package]
name = "mode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["mp3", "wav", "vorbis"] }
bevy-async-task = "1.3.0"
bevy_editor_pls = "0.6.0"
bevy_tweening = "0.9.0"
chrono = "0.4.31"
ehttp = { version = "0.3.1", features = ["native-async"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
